CDPT-2073: Active indicator is missing on menu links - Stop buttons in main nav from jumping when tabbed through - Remove box shadow from header buttons only - Clean up pseudo classes

--- a/public/app/frontend/src/components/header/header.scss
+++ b/public/app/frontend/src/components/header/header.scss
@@ -34,6 +34,7 @@
 
     &__search {
         @include spacing('margin', 1, 'bottom');
+
         @media screen and (min-width: $justice-lg) {
             margin-bottom: 0;
         }
@@ -42,6 +43,14 @@
             width: 100%;
             @media screen and (min-width: $justice-lg) {
                 width: 15rem;
+            }
+        }
+
+        input[type='submit'] {
+            width: fit-content;
+
+            &:focus-visible:not(:active, :hover, :disabled) {
+                box-shadow: none;
             }
         }
     }
