--- a/public/app/frontend/src/components/text-input-form/text-input-form.scss
+++ b/public/app/frontend/src/components/text-input-form/text-input-form.scss
@@ -14,7 +14,7 @@
         input[type='submit'] {
             width: fit-content;
 
-            &:focus:not(:active, :hover) {
+            &:has(:focus-visible):not(:active, :hover, :disabled) {
                 box-shadow: none;
             }
         }
